# EasyWAF

./: CHANGELOG.md  Cargo.toml  config.toml
migrations/: 001_init.sql  002_listen_port.sql  003_waf_rules.sql  004_rules_external_id.sql  005_challenge_threshold.sql
rules/: 920-protocol.toml  930-lfi.toml  931-rfi.toml  932-rce.toml  933-php.toml  941-xss.toml  942-sqli.toml  990-scanners.toml
src/: auth.rs  challenge.rs  config.rs  db.rs  error.rs  main.rs  nginx.rs
src/modules/: mod.rs  traffic.rs  waf.rs
src/proxy/: mod.rs
src/routes/: certs.rs  dashboard.rs  geoip.rs  login.rs  mod.rs  policy.rs  rules.rs  sites.rs
static/css/: easywaf.css
static/js/: easywaf.js
templates/: cert_create.html  certs.html  dashboard.html  geoip.html  layout_default.html  layout_login.html  login.html  policy.html  policy_create.html  policy_rules.html  policy_settings.html  rule_catalog.html  rule_create.html  rule_custom_new.html  rule_edit.html  rules_all.html  site_create.html  site_settings.html  sites.html
