[package]
name = "easywaf"
version = "0.1.0"
edition = "2024"
authors = ["Yariv Hakim"]
description = "EasyWAF - Web Application Firewall Management GUI"
license = "GPL-3.0"

[[bin]]
name = "easywaf"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json", "tokio", "multipart"] }
axum-server = "0.7"
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }
tokio = { version = "1.34", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tera = "1.20"
toml = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.17.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }
anyhow = "1.0"
thiserror = "1.0"
urlencoding = "2.1"
time = { version = "0.3", features = ["serde"] }
